src/Scrollyteller/index.module.scss
.base {
  position: relative;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;

  * {
    box-sizing: border-box;
  }
}

.graphic {
  width: 100vw;
  height: 100vh;
  z-index: 1;

  // Chrome fix https://stackoverflow.com/a/28906246/955917
  -webkit-transform: translate3d(0, 0, 0);

  &::after {
    display: none;
  }
}

.before {
  position: absolute;
  top: 0;
  left: 0;
}

.during {
  position: fixed;
  top: 0;
  left: 0;
}

.after {
  position: absolute;
  bottom: 0;
  height: 100vh !important;
  overflow: hidden;
}

@media only screen and (max-width: 667px) {
  .base {
    height: 100%;
  }
}

